@@ -4,6 +4,7 @@ xxxx-yy-zz (0.3):
   Minor bugfix if using MythSQL and PSIP and more than 1 dtv sourceid
   Minor bugfix if CDS = 255
   Format mplexid=XXYYY where XX=sourceid and YYY=CDS (similar to chanids)
+  Added frequency file output option (use this for PSIP scans)
 2009-05-20 (0.2.1):
   HDHomerun support debugged (thanks to Mark Knecht!)
   Added option to select HDHR /tuner# (tested working thanks to Brad Fuller)
